components/tabs/tabs.css
.tabs {
    box-sizing: border-box;
    position: relative;
    overflow: hidden;
}

.tabs__header {
    background: var(--white);
    border-bottom: 1px solid var(--grey-2);
    width: 100vw;
}

.tabs__scroller {
    display: flex;
    gap: 40px;
    align-items: end;
    overflow-x: scroll;
    scrollbar-width: none;
}

.tabs__native-control {
    position:absolute;
    left:0px;
    top: 0px;
    opacity: 0;
    pointer-events: none;
    outline: none;
}

.tabs__item {
    display: inline-block;
    font-style: normal;
    font-weight: normal;
    font-size: 16px;
    line-height: 24px;
    color: var(--black);
    white-space: nowrap;
    border-bottom: 5px solid transparent;
}

.tabs__elements-tab-content {
    display: none;
}

.tabs__containers-tab-content {
    display: none;
}

.tabs__templates-tab-content {
    display: none;
}


.tabs__native-control_1:checked ~ .tabs__header .tabs__item-marker_1 {
    border-bottom-color: var(--black);
}

.tabs__native-control_1:checked ~ .tabs__content .tabs__elements-tab-content {
    display: flex;
}

.tabs__native-control_1:checked ~ .tabs__content .tabs__containers-tab-content {
    display: flex;
}

.tabs__native-control_1:checked ~ .tabs__content .tabs__templates-tab-content {
    display: flex;
}


.tabs__native-control_2:checked ~ .tabs__header .tabs__item-marker_2 {
    border-bottom-color: var(--black);
}

.tabs__native-control_2:checked ~ .tabs__content .tabs__elements-tab-content {
    display: flex;
}


.tabs__native-control_3:checked ~ .tabs__header .tabs__item-marker_3 {
    border-bottom-color: var(--black);
}

.tabs__native-control_3:checked ~ .tabs__content .tabs__containers-tab-content {
    display: flex;
}


.tabs__native-control_4:checked ~ .tabs__header .tabs__item-marker_4 {
    border-bottom-color: var(--black);
}

.tabs__native-control_4:checked ~ .tabs__content .tabs__templates-tab-content {
    display: flex;
}

